--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 colorlog==2.10.0
 contextlib2==0.5.4        # via raven
+django-appconf==1.0.2     # via django-compressor
+django-compressor==2.1.1
 django-debug-toolbar==1.8
 django-environ==0.4.2
 django-hosts==2.0
@@ -16,6 +18,8 @@ pyasn1-modules==0.0.8     # via oauth2client
 pyasn1==0.2.3             # via oauth2client, pyasn1-modules, rsa
 pytz==2017.2              # via django
 raven==6.0.0
+rcssmin==1.0.6            # via django-compressor
+rjsmin==1.0.12            # via django-compressor
 rsa==3.4.2                # via oauth2client
 six==1.10.0               # via django-environ, oauth2client
 sqlparse==0.2.3           # via django-debug-toolbar
