--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   },
   "scripts": {
     "build": "echo 'No javascript build script...'"
+  },
+  "dependencies": {
+    "bower": "^1.8.0",
+    "stylus": "^0.54.5"
   }
 }
